--- a/app/views/portfolios/_about.html.erb
+++ b/app/views/portfolios/_about.html.erb
@@ -1,65 +1,22 @@
-<!--about-->
-<div class="about-w3layouts" id="about">
-	<div class="container">
-		<div class="tittle-agileinfo">
-			<div class="title-wthree">
-				<h5 class="title-w3"><span>01</span>About Me</h5>
-				<div class="clearfix"></div>
+<div id="about">
+	<div class="tittle-agileinfo col-xs-12 col-sm-12 col-md-12 col-lg-12">
+		<h5 class="title-w3">
+			<span>01</span>
+			<b>About Me</b>
+		</h5>
+	</div>
+	<br>
+	<div class="grey-text-style second-block col-xs-12 col-sm-12 col-md-12 col-lg-12">
+		<span class="span-b-8">Hi!, I am <b>Touqeer Ahmad.</b></span><br>
+		<span class="span-b-8">I am highly motivated, efficient and capable developer along withstand vision to provide the best solutions.</span><br>
+		<span>I am involved in most parts of the software life cycle.</span><br>
+		<div>
+			<span>i.e</span>
+				<div style="padding-left: 20px;">
+				<span>System and network architecture designing, schema designing and implementation.</span><br>
+				<span>Including preparing documents like FSD, TSD, BRD.</span><br>
+				<span>From planning to production release</span><br>
 			</div>
-			<div class="about-top">
-				<h3 class="subheading-agileits-w3layouts">Some words about me</h3>
-				<p class="para-agileits-w3layouts">I am highy motivated, efficient and capable developer with withstand vision to provide the clients with the best solutions. </p>
-			</div>
-		</div>
-		<div class="col-md-4 about-left-agileits">
-			<div class="services-grids social">
-				<a class="fa fa-delicious" aria-hidden="true"></a>
-				<p class="para-agileits-w3layouts">Get extensive web solutions.<br>Fast and Responsive sites with proper SEO</p>
-				<div class="clearfix"></div>
-				<h6>Web Development</h6>
-			</div>
-			<div class="services-grids">
-				<a class="fa fa-mobile" aria-hidden="true"></a>
-				<p class="para-agileits-w3layouts">Developing API's with proper REST and HTTP protocols by keeping the perspective of stability, consistency, flexibility, adobtability and security...</p>
-				<h6>API Development</h6>
-			</div>
-			<div class="services-grids">
-				<a class="fa fa-globe" aria-hidden="true"></a>
-				<p class="para-agileits-w3layouts">Payment(Strip, Payfort), Maps, Email-Service (Sendgrid), Twillio, Firebase(Firechat, Push Notifications)...</p>
-				<h6>Third Party Services</h6>
-			</div>
-			<div class="services-grids">
-				<a class="fa fa-desktop" aria-hidden="true"></a>
-				<p class="para-agileits-w3layouts">Heroku, AWS (Amazon Web Services): Elastic Beanstalk, EC2, EB CLI, Scheduled Volumn Backup, RDS with autobackup, S3 with versioning, S3fs, Glacier, CloudWatch, CloudFront, VPN, VPC, Elastic Load Balancer, Auto Scaling, Security...</p>
-				<h6>DevOps</h6>
-			</div>
-			<div class="clearfix"></div>
-		</div>
-
-		<div class="col-md-8 about-right">
-			<div class="about-border-w3ls">
-			</div>
-			<div class="person-info-agileits-w3layouts">
-				<p class="para-agileits-w3layouts"><span>Hi!, I am Touqeer Ahmad </span>I am a technology enthusiast.<br>I have extensive experience with Ruby on Rails, MongoDB, MySQL, Heroku, Amazon Web Services, APIs, Google Map Integration, Polygon Construction, Mobile Push Notifications, Action Cable (Sockets), Web Crawlers, Slim/HTML5/CSS3, Bootstrap 3/4, Responsive Designs, Twilio etc</p><br>
-				<p>I am involved in most parts of the software life cycle i.e architecture designing, schema designing, and implementation. From planning to production release.</p>
-				<ul>
-					<% age = (Time.now - Time.parse("13 June 1993"))/(60*60*24*365) %>
-					<li><span>Name</span>: Touqeer Ahmad</li>
-					<li><span>Age</span>: <%= age.to_i %> Years</li>
-					<li><span>Experience</span>: +<%= Time.now.year - 2016 %> Years</li>
-					<li><span>Email</span>: <a href="mailto:tqr093@gmail.com">tqr093@gmail.com</a></li>
-					<li><span>Address</span>: Lahore, Pakistan</li>
-					<li><a class="botton-w3ls" target="_tab" href="/portfolios/download_cv">Resume</a></li>
-				</ul>
-				<div class="clearfix"></div>
-
-				<div class="pos-w3ls">
-					<h4><span class="red-w3ls">Get</span> in touch</h4>
-					<div class="button-w3layouts"><a href="#contact" class="scroll">Contact Me</a></div>
-				</div>
-			</div>
-			<div class="clearfix"> </div>
 		</div>
 	</div>
 </div>
-<!--//about-->
