--- a/app/views/portfolios/_contact.html.erb
+++ b/app/views/portfolios/_contact.html.erb
@@ -64,3 +64,5 @@
 	</div>
 </div>
 <!-- //contact -->
+
+        <li><span>Email</span>: <a href="mailto:tqr093@gmail.com">tqr093@gmail.com</a></li>
