--- a/app/assets/stylesheets/portfolio.scss.erb
+++ b/app/assets/stylesheets/portfolio.scss.erb
@@ -1,305 +1,339 @@
- @font-face {
-            font-family: 'Glyphicons Halflings';
-            src: url('/fonts/glyphicons-halflings-regular.eot');
-        }
+@font-face {
+  font-family: 'Glyphicons Halflings';
+  src: url('/fonts/glyphicons-halflings-regular.eot');
+}
+
+.cover-container{  
+  padding-right: 30px;
+  padding-left: 30px;
+  margin-right: auto;
+  margin-left: auto;
+  width: 100%;
+  max-width: 1500px;
+}
+.cover-container::before{
+  display: table;
+  content: " ";
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.tech-logos{
+  margin-top: 60px;
+  display: flex;
+  justify-content: space-between
+}
+.tech-logos>.col-md-1{
+  padding: 0;
+  margin: 0;
+}
+.tech-logos>img{
+  height: 95px;
+}
+.tech-logos>.col-md-1>img{
+  height: 95px;
+}
+.tech-logos>div>img{
+  height: 95px;
+}
 .noscroll {
-	overflow: hidden;
+  overflow: hidden;
 }
 
 .grid-wrap {
-	margin: 10px auto 0;
-	/*width: 75%;*/
+  margin: 10px auto 0;
+  /*width: 75%;*/
     /*display: -webkit-box;*/
-	padding: 0;
-	-webkit-perspective: 1500px;
-	perspective: 1500px;
+  padding: 0;
+  -webkit-perspective: 1500px;
+  perspective: 1500px;
 }
 
 .grid {
     display: flow-root;
     margin: 0 5.5%;
-	position: relative;
-	-webkit-transition: all 0.5s cubic-bezier(0,0,0.25,1);
-	transition: all 0.5s cubic-bezier(0,0,0.25,1);
-	-webkit-transform-style: preserve-3d;
-	transform-style: preserve-3d;
-	text-align:center;
+  position: relative;
+  -webkit-transition: all 0.5s cubic-bezier(0,0,0.25,1);
+  transition: all 0.5s cubic-bezier(0,0,0.25,1);
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  text-align:center;
 }
 .grid > .col-xs-12{
-	display: -webkit-inline-box;
+  display: -webkit-inline-box;
     overflow-x: auto;
     margin-bottom: 20px;
     padding: 0;
 }
 .grid > .col-xs-12::-webkit-scrollbar-track{
-	background: -webkit-linear-gradient(red, orange);
+  background: -webkit-linear-gradient(red, orange);
 }
 
 .grid > .col-xs-12::-webkit-scrollbar {
-	height: 5px;
-	background-color: #f5f5f5;
+  height: 5px;
+  background-color: #f5f5f5;
 }
 
 .grid > .col-xs-12::-webkit-scrollbar-thumb {
-	background-color: #000;
+  background-color: #000;
 }
 
 .view-full .grid {
-	-webkit-transform: translateZ(-1500px);
-	transform: translateZ(-1500px);
+  -webkit-transform: translateZ(-1500px);
+  transform: translateZ(-1500px);
 }
 
 .grid figure,
 .grid .placeholder {
-	width: 350px;
-	height: 350px;
+  width: 350px;
+  height: 350px;
 }
 
 .grid figure {
-	margin: 20px;
-	display: block;
+  margin: 20px;
+  display: block;
   justify-content: center;
   height: 400px; /* or other desired height */
   overflow: hidden;
-	cursor: pointer;
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
+  cursor: pointer;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .grid figure.active {
-	opacity: 0;
+  opacity: 0;
 }
 
 .grid .placeholder {
-	pointer-events: none;
-	position: absolute;
-	-webkit-transform-style: preserve-3d;
-	transform-style: preserve-3d;
-	-webkit-transition: all 0.5s ease-out;
-	transition: all 0.5s ease-out;
+  pointer-events: none;
+  position: absolute;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  -webkit-transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out;
 }
 
 .placeholder > div {
-	display: block;
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	-webkit-backface-visibility: hidden;
-	backface-visibility: hidden;
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 .placeholder .front img {
-	width: 100%;
-	height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .placeholder .back {
-	background: white;
-	-webkit-transform: rotateY(180deg);
-	transform: rotateY(180deg);
+  background: white;
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 
 .view-full .placeholder {
-	-webkit-transition: all 0.5s 0.1s cubic-bezier(0,0,0.25,1);
-	transition: all 0.5s 0.1s cubic-bezier(0,0,0.25,1);
+  -webkit-transition: all 0.5s 0.1s cubic-bezier(0,0,0.25,1);
+  transition: all 0.5s 0.1s cubic-bezier(0,0,0.25,1);
 }
 
 .vertical .view-full .placeholder {
-	-webkit-transform: translateZ(1500px) rotateX(-179.9deg);
-	transform: translateZ(1500px) rotateX(-179.9deg); 
+  -webkit-transform: translateZ(1500px) rotateX(-179.9deg);
+  transform: translateZ(1500px) rotateX(-179.9deg); 
 }
 
 .grid figure img {
-	display: block;
-	width: 100%;
-	min-height: 100%;
+  display: block;
+  width: 100%;
+  min-height: 100%;
 }
 
 .content,
 .loading {
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	pointer-events: none; 
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  pointer-events: none; 
 }
 
 .content {
-	overflow-y: scroll;
-	height: 0;
-	background: #fff;
-	visibility: hidden;
-	z-index: 400;
-	-webkit-overflow-scrolling: touch;
+  overflow-y: scroll;
+  height: 0;
+  background: #fff;
+  visibility: hidden;
+  z-index: 400;
+  -webkit-overflow-scrolling: touch;
 }
 
 .loading {
-	opacity: 0;
-	z-index: 1;
-	background: transparent url('<%= asset_path("loader.gif") %>') no-repeat center center;
-	-webkit-transform: scale(0.5);
-	transform: scale(0.5);
-	-webkit-transition: opacity 0.5s, -webkit-transform 0.5s;
-	transition: opacity 0.5s, transform 0.5s;
+  opacity: 0;
+  z-index: 1;
+  background: transparent url('<%= asset_path("loader.gif") %>') no-repeat center center;
+  -webkit-transform: scale(0.5);
+  transform: scale(0.5);
+  -webkit-transition: opacity 0.5s, -webkit-transform 0.5s;
+  transition: opacity 0.5s, transform 0.5s;
 }
 
 .loading.show {
-	opacity: 1;
-	-webkit-transform: scale(1);
-	transform: scale(1);
+  opacity: 1;
+  -webkit-transform: scale(1);
+  transform: scale(1);
 }
 
 .content.show {
-	height: auto;
-	pointer-events: auto;
-	visibility: visible;
+  height: auto;
+  pointer-events: auto;
+  visibility: visible;
 }
 
 .content > div {
-	z-index: 10;
-	position: absolute;
-	top: 0;
-	width: 100%;
-	overflow: hidden;
-	opacity: 0;
-	background: #fff;
-	padding-top: 10px;
-	height: 100%;
-	.col-sm-8, .col-sm-4{
-		height: calc(100% - 100px);
-		.carousel-inner{
-			display: block;
-		  text-align: center;
-		  height: 100%;
-			.item{
-				height: 100%;
-				img {
-					height: 100%;
-				}
-			}
-			.item.active{
-				display: inline-block;
-			}
-		}
-		.carousel-indicators{
-			li{
-				border: 2px solid #820000;
-			}
-			li.active{
-				background-color: #ff9cad;
-			}
-		}
-		.carousel-control{
-			height: 100%;
-			width: 80px;
-		  display: table;
-		}
-	}
+  z-index: 10;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  overflow: hidden;
+  opacity: 0;
+  background: #fff;
+  padding-top: 10px;
+  height: 100%;
+  .col-sm-8, .col-sm-4{
+    height: calc(100% - 100px);
+    .carousel-inner{
+      display: block;
+      text-align: center;
+      height: 100%;
+      .item{
+        height: 100%;
+        img {
+          height: 100%;
+        }
+      }
+      .item.active{
+        display: inline-block;
+      }
+    }
+    .carousel-indicators{
+      li{
+        border: 2px solid #820000;
+      }
+      li.active{
+        background-color: #ff9cad;
+      }
+    }
+    .carousel-control{
+      height: 100%;
+      width: 80px;
+      display: table;
+    }
+  }
 }
 .content > div.show {
-	opacity: 1;	
-	-webkit-transition: opacity 0.6s;
-	transition: opacity 0.6s;
-	z-index: 12;
+  opacity: 1; 
+  -webkit-transition: opacity 0.6s;
+  transition: opacity 0.6s;
+  z-index: 12;
 }
 .carousel-control > span{
     display: table-cell;
     vertical-align: middle;
 }
 .icon:before {
-	font-family: 'Glyphicons Halflings';
-	speak: none;
-	font-style: normal;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	line-height: 1;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+  font-family: 'Glyphicons Halflings';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .close-content {
-	position: fixed;
-	z-index: 1000;
-	top: 10px;
-	right: 10px;
-	font-size: 1.6em;
-	color: #aaa;
-	cursor: pointer;
-	pointer-events: none;
-	opacity: 0;
-	-webkit-transition: opacity 0.3s;
-	transition: opacity 0.3s;
+  position: fixed;
+  z-index: 1000;
+  top: 10px;
+  right: 10px;
+  font-size: 1.6em;
+  color: #aaa;
+  cursor: pointer;
+  pointer-events: none;
+  opacity: 0;
+  -webkit-transition: opacity 0.3s;
+  transition: opacity 0.3s;
 }
 .fa-arrow-left:before, .fa-arrow-right:before{
-	color: black;
+  color: black;
 }
 
 .close-content:hover {
-	color: #999;
+  color: #999;
 }
 
 .content > div.show ~ .close-content {
-	opacity: 1;
-	pointer-events: auto;
+  opacity: 1;
+  pointer-events: auto;
 }
 
 /* Dummy content */
 
 .content-img {
-	max-width: 600px;
-	width: 90%;
-	opacity: 0;
-	-webkit-transition: opacity 0.5s, -webkit-transform 0.5s;
-	transition: opacity 0.5s, transform 0.5s;
+  max-width: 600px;
+  width: 90%;
+  opacity: 0;
+  -webkit-transition: opacity 0.5s, -webkit-transform 0.5s;
+  transition: opacity 0.5s, transform 0.5s;
 }
 
 .vertical .content-img,
 .vertical .content-text {
-	-webkit-transform: translateY(100px);
-	transform: translateY(100px);
+  -webkit-transform: translateY(100px);
+  transform: translateY(100px);
 }
 .content > div.show .content-img,
 .content > div.show .content-text {
-	opacity: 1;
+  opacity: 1;
 }
 
 .vertical .content > div.show .content-img,
 .vertical .content > div.show .content-text {
-	-webkit-transform: translateY(0);
-	transform: translateY(0);
+  -webkit-transform: translateY(0);
+  transform: translateY(0);
 }
 .myportfolio h3.content-text {
-	text-align:center;
-	font-size:30px;
-	font-family: 'Cinzel', serif;
-	line-height:25px;
-	font-weight:bold;
-	padding: 25px 0 35px;
-	-webkit-transition: opacity 0.6s, -webkit-transform 0.6s;
-	transition: opacity 0.7s, transform 0.7s;
+  text-align:center;
+  font-size:30px;
+  font-family: 'Cinzel', serif;
+  line-height:25px;
+  font-weight:bold;
+  padding: 25px 0 35px;
+  -webkit-transition: opacity 0.6s, -webkit-transform 0.6s;
+  transition: opacity 0.7s, transform 0.7s;
 }
 .myportfolio p.content-text {
-	text-align:center;
-	font-size:17px;
-	padding:0 20px;
-	line-height:30px;
-	font-weight:bold;
-	-webkit-transition: opacity 0.9s, -webkit-transform 0.9s;
-	transition: opacity 0.9s, transform 0.9s;
+  text-align:center;
+  font-size:17px;
+  padding:0 20px;
+  line-height:30px;
+  font-weight:bold;
+  -webkit-transition: opacity 0.9s, -webkit-transform 0.9s;
+  transition: opacity 0.9s, transform 0.9s;
 }
 .content-img {
-	height: 400px;
-	/*background-color: #ddd;*/
-	margin: 30px auto;
+  height: 400px;
+  /*background-color: #ddd;*/
+  margin: 30px auto;
 }
 .content-text {
-	
+  
 }
 /* Simple fallback */
 /* if any of these are not supported, a simple fallback will be shown */
@@ -312,10 +346,10 @@
 .no-pointerevents .close-content,
 .no-csstransforms3d .close-content,
 .no-csstransitions .close-content {
-	opacity: 1;
-	visibility: visible;
-	display: none;
-	height: auto;
+  opacity: 1;
+  visibility: visible;
+  display: none;
+  height: auto;
 }
 
 .no-pointerevents .show .close-content,
@@ -330,25 +364,43 @@
 .no-csstransforms3d .content-text, 
 .no-pointerevents .content-img,
 .no-pointerevents .content-text {
-	display: block !important;
-	opacity: 1;
+  display: block !important;
+  opacity: 1;
+}
+
+.cover-location{
+  float: left;
+  position: absolute;
+  bottom: 0;
+  padding: 4px 16px;
+  margin-bottom: 30px;
+  font-size: 18px;
+  letter-spacing: 7px;
+  font-weight: bold;
+  background: #000000a8;
+  line-height: 25px;
+  font-variant: small-caps;
+  width: fit-content;
+  p{
+    color: white;
+  }
 }
 
 @media screen and (max-width: 1000px) {
 
-	.grid figure,
-	.grid .placeholder {
-		width: 240px;
-		height: 240px;
-	}
-	.grid{
-		margin: 0 20px;
-	}
+  .grid figure,
+  .grid .placeholder {
+    width: 240px;
+    height: 240px;
+  }
+  .grid{
+    margin: 0 20px;
+  }
 
 }
 
 @media (max-width: 640px) {
-	.myportfolio p.content-text {
-	padding:0 50px 100px;	
-	}
+  .myportfolio p.content-text {
+  padding:0 50px 100px; 
+  }
 }
