--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,13 +1,6 @@
-<!-- header -->
 <header>
-
 	<div class="header-bottom-agileits">
-		<div class="w3-logo">
-			<h1><a href="index.html">ROR Developer<span class="sub-logo">ROR Developer</span></a></h1>
-		</div>
-		<!-- navigation -->
 		<nav class="navbar navbar-default shift">
-			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
 				    aria-expanded="false">
@@ -19,22 +12,18 @@
 
 			</div>
 
-			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
-					<li><a class="active" href="index.html">Home</a></li>
-					<li><a class="scroll" href="#about">About</a></li>
-					<li><a class="scroll" href="#skills">Skills</a></li>
-					<li><a class="scroll" href="#portfolio">Portfolio</a></li>
-					<li><a class="scroll" href="#contact">Contact</a></li>
+					<li><a class="scroll fa fa-home" title="Home" href="#home"></a></li>
+					<li><a class="scroll fa fa-user" title="About" href="#about"></a></li>
+					<li><a class="scroll fa fa-graduation-cap" title="Education" href="#education"></a></li>
+					<li><a class="scroll fa fa-briefcase" title="Experience" href="#experience"></a></li>
+					<li><a class="scroll fa fa-laptop" title="Skills" href="#skills"></a></li>
+					<li><a class="scroll fa fa-phone" title="Contact Me" href="#contact"></a></li>
+					<li><a class="scroll fa fa-download" title="Download Resume"></a></li>
 				</ul>
-
 			</div>
-			<!-- /.navbar-collapse -->
-
 		</nav>
 	</div>
 	<div class="clearfix"></div>
-	<!-- //navigation -->
 </header>
-<!-- //header -->
