--- a/app/views/portfolios/_skills.html.erb
+++ b/app/views/portfolios/_skills.html.erb
@@ -1,152 +1,63 @@
-<!-- awards and skills -->
-<div class="awards-bg-agile about skills" id="skills" style="padding: 2.5em 0 0 0;">
-	<div class="title-wthree">
-		<h5 class="title-w3" style="margin-bottom: 0;"><span>04</span>Skills</h5>
-		<div class="clearfix"></div>
-	</div>
-	<div class="container">
-		<div class="skill-agileinfo">
-			<div class="skill-grids">
-				<div class="col-sm-6 skills-w3lsleft">
-					<h3>Experience With Gems</h3>
-					<div class="col-xs-4" >
-						<ul>
-							<% @gems_list[0..12].each do |g| %>
-								<li><i class="fa fa-check-square-o" aria-hidden="true"></i><%= g %></li>
-							<% end %>
-						</ul>
-					</div>
-					<div class="col-xs-4" >
-						<ul>
-							<% @gems_list[12..24].each do |g| %>
-								<li><i class="fa fa-check-square-o" aria-hidden="true"></i><%= g %></li>
-							<% end %>
-						</ul>
-					</div>
-					<div class="col-xs-4" >
-						<ul>
-							<% @gems_list[24..36].each do |g| %>
-								<li><i class="fa fa-check-square-o" aria-hidden="true"></i><%= g %></li>
-							<% end %>
-						</ul>
-					</div>
-				</div>
-				<div class="col-sm-6 skills-w3lsright">
-					<h3>Technical Skills</h3>
-					<div class="skillbar" data-percent="98">
-						<span class="skillbar-title" style="background:#a70000;">Ruby on Rails</span>
-						<p class="skillbar-bar" style="background: #D40000;"></p>
-						<span class="skill-bar-percent"></span>
-					</div>
-					<!-- End Skill Bar --> 
-					<div class="skillbar" data-percent="96">
-						<span class="skillbar-title" style="background:#067D99;">API</span>
-						<p class="skillbar-bar rw-words rw-words-2" style="background: #3e94a9;">
-								<span>Authentication & Authorization</span>
-								<span>PostMan & Apiary Documentation</span>
-								<span>Versioning</span>
-								<span>Bulk Operations & Response Time</span>
-								<span>Exceptional Handling with proper Status Codes</span>
-								<span>Response Type (json, xml, txt)</span>
-						</p>
-						<span class="skill-bar-percent"></span>
-					</div>
-					<!-- End Skill Bar -->   
-					<div class="skillbar" data-percent="98">
-						<span class="skillbar-title" style="background:#E93E00;">AWS</span>
-						<p class="skillbar-bar rw-words rw-words-2" style="background: #F55E00;">
-							<span>Elastic Beanstalk (EB-CLI)</span>
-							<span>EC2, Security, Volumn Backup, Snapshot</span>
-							<span>S3, Glacier, S3-Backup, Versioning</span>
-							<span>RDS, Auto-Backup</span>
-							<span>CloudWatch (Policy Defining)</span>
-							<span>CloudFront</span>
-							<span>Auto-Scaling & Auto-Load-Balancing</span>
-						</p>
-						<span class="skill-bar-percent"></span>
-					</div>
-					<!-- End Skill Bar --> 
-					<div class="skillbar" data-percent="99">
-						<span class="skillbar-title" style="background:#2D50BC;">Web</span>
-						<p class="skillbar-bar rw-words rw-words-2" style="background:#3499E3;">
-							<span>HTML5 / Slim / HAML</span>
-							<span>CSS3 / SASS / SCSS</span>
-							<span>Media Queries, Responsiveness</span>
-							<span>SEO, Sitemap</span>
-							<span>Fast Loading/Rendering</span>
-							<span>i18n</span>
-							<span>Partial Refresh</span>
-						</p>
-						<span class="skill-bar-percent"></span>
-					</div>
-					<!-- End Skill Bar --> 
-					<div class="skillbar" data-percent="94">
-						<span class="skillbar-title" style="background:#565656;">Javascript/jQuery</span>
-						<p class="skillbar-bar" style="background:#949494;"></p>
-						<span class="skill-bar-percent"></span>
-					</div>
-					<!-- End Skill Bar -->
-					<div class="skillbar" data-percent="92">
-						<span class="skillbar-title" style="background:#5D3F28;">Database</span>
-						<p class="skillbar-bar rw-words rw-words-2" style="background:#9a6c48;">
-							<span>MySQL</span>
-							<span>Postgres</span>
-							<span>Mongoid</span>
-							<span>ActiveRecord</span>
-							<span>Joins</span>
-							<span>Grouping</span>
-							<span>Query Optimization</span>
-						</p>
-						<span class="skill-bar-percent"></span>
-					</div>
-					<!-- End Skill Bar -->
-					<div class="skillbar" data-percent="99">
-						<span class="skillbar-title" style="background:#ff5858;">Git</span>
-						<p class="skillbar-bar rw-words rw-words-2" style="background:#ff8080;">
-							<span>Multiple Enviroment (Prod, Develop, Staging)</span>
-							<span>Multi-Remote</span>
-							<span>Rebase</span>
-							<span>Cherry-Pick</span>
-							<span>Squash</span>
-							<span>Commit Manipulation</span>
-							<span>Conflicts Handling</span>
-						</p>
-						<span class="skill-bar-percent"></span>
-					</div>
-					<!-- End Skill Bar --> 
-				</div>
-				<div class="clearfix"></div>
-			</div> 
-		</div> 
-	</div>
-	<!-- //skills -->
+<div id="skills">
+  <div class="tittle-agileinfo col-xs-12 col-sm-12 col-md-12 col-lg-12">
+    <h5 class="title-w3">
+      <span>01</span>
+      <b>Skills</b>
+    </h5>
+  </div>
+  <br>
+  <div class="grey-text-style second-block col-xs-12 col-sm-12 col-md-12 col-lg-12">
+    <div class="skills-details col-sm-12">
+      <div class="col-lg-4 col-md-4 col-sm-4">
+        <div class="services-grids">
+          <a class="fa fa-mobile" aria-hidden="true"></a>
+          <p class="para-agileits-w3layouts">Ruby on Rails, Javascript, JQuery, Slim/HTML5, CSS3/SCSS, Bootstrap (3, 4, 5), ReactJS, NextJS, Action Cable (Sockets), Web Crawlers/Web Scrappers</p>
+          <h6>Programing Skills</h6>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4">
+        <div class="services-grids">
+          <a class="fa fa-mobile" aria-hidden="true"></a>
+          <p class="para-agileits-w3layouts">MongoDB, Postgres, MySQL, Caching System (Redis)</p>
+          <h6>Database</h6>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4">
+        <div class="services-grids social">
+          <a class="fa fa-delicious" aria-hidden="true"></a>
+          <p class="para-agileits-w3layouts">Extensive web solutions.<br>Fast, Responsive, User Friendly sites with proper SEO and Cross Browser Compatibility...</p>
+          <div class="clearfix"></div>
+          <h6>Web Development / Frontend</h6>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4">
+        <div class="services-grids">
+          <a class="fa fa-mobile" aria-hidden="true"></a>
+          <p class="para-agileits-w3layouts">Developing API's with proper REST and HTTP protocols by keeping the perspective of stability, consistency, flexibility, adaptability and security...</p>
+          <h6>API Development</h6>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4">
+        <div class="services-grids">
+          <a class="fa fa-globe" aria-hidden="true"></a>
+          <p class="para-agileits-w3layouts">Payment(Stripe, Payfort, EGHL, iPay88), Google Adsense, Google Map Integration, Polygon Construction,, Email-Service (Sendgrid, Gmail, Mailchimp), Twillio, Firebase(Firechat, Mobile & Browser Push Notifications), Bitly, StrAPIs...</p>
+          <h6>Third Party Services</h6>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4">
+        <div class="services-grids">
+          <a class="fa fa-desktop" aria-hidden="true"></a>
+          <p class="para-agileits-w3layouts">Heroku, Linode, AWS (Amazon Web Services), Docker, Kubernetes (K8s), CI/CD, Git, Gitea/Gitlab, nginx...</p>
+          <h6>DevOps</h6>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4">
+        <div class="services-grids">
+          <a class="fa fa-desktop" aria-hidden="true"></a>
+          <p class="para-agileits-w3layouts">Elastic Beanstalk, EC2, EB CLI, Scheduled Volumn Backup (AMI), RDS with autobackup, Lambda Functions, IAM Roles, S3 with versioning, S3fs, Glacier, CloudWatch, CloudFront, VPN, VPC, Elastic Load Balancer, Auto Scaling, Security-Groups...</p>
+          <h6>AWS</h6>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-<!-- //awards and skills -->
-<!-- language -->
-<div class="language-skills" style="display: none;">
-	<div class="container">
-		<div class="col-md-6 lang-left-w3-agile">
-			<div class="title-wthree">
-				<h5 class="title-w3">Language Skills</h5>
-				<div class="clearfix"></div>
-			</div>
-			<p class="para-agileits-w3layouts">Feel free to contact me in any language appropriate for you.</p>
-		</div>
-		<div class="col-md-6 w3l_about_bottom_grid_right bar-grids">
-			<h6>English<span> 100% </span></h6>
-			<div class="progress">
-				<div class="progress-bar progress-bar-striped active" style="width: 100%">
-				</div>
-			</div>
-			<div class="mid-bar">
-				<h6>Urdu<span> 100% </span></h6>
-				<div class="progress">
-					<div class="progress-bar progress-bar-striped active" style="width: 100%">
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="clearfix"> </div>
-	</div>
-</div>
-<!-- //language -->
