--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,18 +1,18 @@
 <!-- banner -->
+<%= render partial: 'layouts/header' %>
 <div class="banner" id="home">
-	<div class="container">
-		<%= render partial: 'layouts/header' %>
+	<div class="cover-container">
 		<%= render partial: 'cover' %>
 	</div>
 </div>
 <!-- //banner -->
 <%= render partial: 'about' %>
-<%= render partial: 'education' %>
-<%= render partial: 'experience' %>
+<%#= render partial: 'education' %>
+<%#= render partial: 'experience' %>
 <%= render partial: 'skills' %>
-<%= render partial: 'portfolio' %>
-<%= render partial: 'contact' %>
-<%= render partial: 'layouts/footer' %>
+<%#= render partial: 'portfolio' %>
+<%#= render partial: 'contact' %>
+<%#= render partial: 'layouts/footer' %>
 
 <a href="#home" class="scroll" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
 <script type="text/javascript">
