--- a/app/views/portfolios/_about.html.erb
+++ b/app/views/portfolios/_about.html.erb
@@ -2,20 +2,24 @@
 	<div class="tittle-agileinfo col-xs-12 col-sm-12 col-md-12 col-lg-12">
 		<h5 class="title-w3">
 			<span>01</span>
+		</h5>
+		<h5 class="title-w3">
 			<b>About Me</b>
 		</h5>
 	</div>
 	<br>
 	<div class="grey-text-style second-block col-xs-12 col-sm-12 col-md-12 col-lg-12">
-		<span class="span-b-8">Hi!, I am <b>Touqeer Ahmad.</b></span><br>
-		<span class="span-b-8">I am highly motivated, efficient and capable developer along withstand vision to provide the best solutions.</span><br>
-		<span>I am involved in most parts of the software life cycle.</span><br>
-		<div>
-			<span>i.e</span>
-				<div style="padding-left: 20px;">
-				<span>System and network architecture designing, schema designing and implementation.</span><br>
-				<span>Including preparing documents like FSD, TSD, BRD.</span><br>
-				<span>From planning to production release</span><br>
+		<div class="second-block-inner">
+			<span class="span-b-8">Hi!, I am <b>Touqeer Ahmad.</b></span><br>
+			<span class="span-b-8">I am highly motivated, efficient and capable developer along withstand vision to provide the best solutions.</span><br>
+			<span>I am involved in most parts of the software life cycle.</span><br>
+			<div>
+				<span>i.e</span>
+					<div style="padding-left: 20px;">
+					<span>System and network architecture designing, schema designing and implementation.</span><br>
+					<span>Including preparing documents like FSD, TSD, BRD.</span><br>
+					<span>From planning to production release.</span><br>
+				</div>
 			</div>
 		</div>
 	</div>
