--- a/app/views/portfolios/_skills.html.erb
+++ b/app/views/portfolios/_skills.html.erb
@@ -1,61 +1,179 @@
 <div id="skills">
   <div class="tittle-agileinfo col-xs-12 col-sm-12 col-md-12 col-lg-12">
     <h5 class="title-w3">
-      <span>01</span>
+      <span>02</span>
+    </h5>
+    <h5 class="title-w3">
       <b>Skills</b>
     </h5>
   </div>
   <br>
   <div class="grey-text-style second-block col-xs-12 col-sm-12 col-md-12 col-lg-12">
-    <div class="skills-details col-sm-12">
+    <div class="second-block-inner col-sm-12">
       <div class="col-lg-4 col-md-4 col-sm-4">
         <div class="services-grids">
           <a class="fa fa-mobile" aria-hidden="true"></a>
-          <p class="para-agileits-w3layouts">Ruby on Rails, Javascript, JQuery, Slim/HTML5, CSS3/SCSS, Bootstrap (3, 4, 5), ReactJS, NextJS, Action Cable (Sockets), Web Crawlers/Web Scrappers</p>
-          <h6>Programing Skills</h6>
+          <div class="skills-list">
+            <ul class="col-lg-6 col-md-6 col-sm-6 p-0">
+              <li>Ruby on Rails</li>
+              <li>Javascript</li>
+              <li>JQuery</li>
+              <li>Slim/HTML5</li>
+              <li>CSS3/SCSS</li>
+            </ul>
+            <ul class="col-lg-6 col-md-6 col-sm-6 p-0">
+              <li>Bootstrap (3, 4, 5)</li>
+              <li>ReactJS</li>
+              <li>NextJS</li>
+              <li>Action Cable (Sockets)</li>
+              <li>Web Crawlers/Scrappers</li>
+            </ul>
+          </div>
+          <h6>Programing</h6>
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4">
         <div class="services-grids">
           <a class="fa fa-mobile" aria-hidden="true"></a>
-          <p class="para-agileits-w3layouts">MongoDB, Postgres, MySQL, Caching System (Redis)</p>
+          <div class="skills-list">
+            <ul class="col-lg-6 col-md-6 col-sm-6 p-0">
+              <li>Postgres</li>
+              <li>MySQL</li>
+              <li>MongoDB</li>
+              <li>Oracle</li>
+              <li>Caching System (Redis)</li>
+            </ul>
+          </div>
           <h6>Database</h6>
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4">
         <div class="services-grids social">
           <a class="fa fa-delicious" aria-hidden="true"></a>
-          <p class="para-agileits-w3layouts">Extensive web solutions.<br>Fast, Responsive, User Friendly sites with proper SEO and Cross Browser Compatibility...</p>
-          <div class="clearfix"></div>
-          <h6>Web Development / Frontend</h6>
+          <div class="skills-list">
+            <ul class="col-lg-6 col-md-6 col-sm-6 p-0">
+              <li>Extensive Web Solutions</li>
+              <li>Fast</li>
+              <li>Responsive</li>
+              <li>User Friendly</li>
+              <li>HCI Rules</li>
+            </ul>
+            <ul class="col-lg-6 col-md-6 col-sm-6 p-0">
+              <li>Proper Cache</li>
+              <li>Cross Browser Compatible</li>
+              <li>Reusable Component</li>
+              <li>SEO (Search Engine Optimization)</li>
+            </ul>
+          </div>
+          <h6>Frontend / Web Development</h6>
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4">
         <div class="services-grids">
           <a class="fa fa-mobile" aria-hidden="true"></a>
-          <p class="para-agileits-w3layouts">Developing API's with proper REST and HTTP protocols by keeping the perspective of stability, consistency, flexibility, adaptability and security...</p>
+          <div class="skills-list">
+            <ul class="col-lg-6 col-md-6 col-sm-6 p-0">
+              <li>Types: SOAP, REST</li>
+              <li>Proper HTTP Protocols</li>
+              <li>Proper Status Codes</li>
+              <li>Fast</li>
+              <li>Security</li>
+            </ul>
+            <ul class="col-lg-6 col-md-6 col-sm-6 p-0">
+              <li>Stability</li>
+              <li>Consistency</li>
+              <li>Flexibility</li>
+              <li>Adaptability</li>
+            </ul>
+          </div>
           <h6>API Development</h6>
         </div>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4">
         <div class="services-grids">
-          <a class="fa fa-globe" aria-hidden="true"></a>
-          <p class="para-agileits-w3layouts">Payment(Stripe, Payfort, EGHL, iPay88), Google Adsense, Google Map Integration, Polygon Construction,, Email-Service (Sendgrid, Gmail, Mailchimp), Twillio, Firebase(Firechat, Mobile & Browser Push Notifications), Bitly, StrAPIs...</p>
-          <h6>Third Party Services</h6>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4">
-        <div class="services-grids">
           <a class="fa fa-desktop" aria-hidden="true"></a>
-          <p class="para-agileits-w3layouts">Heroku, Linode, AWS (Amazon Web Services), Docker, Kubernetes (K8s), CI/CD, Git, Gitea/Gitlab, nginx...</p>
+          <div class="skills-list">
+            <ul class="col-lg-6 col-md-6 col-sm-6 p-0">
+              <li>Heroku</li>
+              <li>Linode</li>
+              <li>Docker</li>
+              <li>Kubernetes (K8s)</li>
+              <li>CI/CD Pipeline</li>
+            </ul>
+            <ul class="col-lg-6 col-md-6 col-sm-6 p-0">
+              <li>nginx</li>
+              <li>Git</li>
+              <li>Github / Gitea / Gitlab</li>
+              <li>AWS (Amazon Web Services)</li>
+            </ul>
+          </div>
           <h6>DevOps</h6>
         </div>
       </div>
+
       <div class="col-lg-4 col-md-4 col-sm-4">
         <div class="services-grids">
           <a class="fa fa-desktop" aria-hidden="true"></a>
-          <p class="para-agileits-w3layouts">Elastic Beanstalk, EC2, EB CLI, Scheduled Volumn Backup (AMI), RDS with autobackup, Lambda Functions, IAM Roles, S3 with versioning, S3fs, Glacier, CloudWatch, CloudFront, VPN, VPC, Elastic Load Balancer, Auto Scaling, Security-Groups...</p>
+          <div class="skills-list">
+            <ul class="col-lg-6 col-md-6 col-sm-6 p-0">
+              <li>Leadership Skill</li>
+              <li>Business Analysis Skills</li>
+              <li>Time Management</li>
+              <li>Critical Thinking</li>
+              <li>Problem Solving</li>
+            </ul>
+            <ul class="col-lg-6 col-md-6 col-sm-6 p-0">
+              <li>Interpersonal Skill</li>
+              <li>Organization Skill</li>
+              <li>Communication Skills</li>
+              <li>Risk Management.</p></li>
+              <li>Team Work</p></li>
+            </ul>
+          </div>
+          <h6>Project Management</h6>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4">
+        <div class="services-grids">
+          <a class="fa fa-desktop" aria-hidden="true"></a>
+          <div class="skills-list">
+            <ul class="col-lg-5 col-md-5 col-sm-5 p-0">
+              <li>EC2</li>
+              <li>IAM Roles</li>
+              <li>CloudWatch</li>
+              <li>CloudFront</li>
+              <li>Glacier</li>
+              <li>S3 + versioning, S3fs</li>
+              <li>VPN, VPC</li>
+            </ul>
+            <ul class="col-lg-7 col-md-7 col-sm-7 p-0">
+              <li>Security-Groups</li>
+              <li>ELB (Elastic Load Balancer)</li>
+              <li>Auto Scaling Group</li>
+              <li>Lambda Functions</li>
+              <li>Elastic Beanstalk + EB CLI</li>
+              <li>RDS + auto-backup</li>
+              <li>Scheduled Volumn Backup (AMI)</li>
+            </ul>
+          </div>
           <h6>AWS</h6>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4">
+        <div class="services-grids">
+          <a class="fa fa-globe" aria-hidden="true"></a>
+          <div class="skills-list">
+            <ul class="col-lg-12 col-md-12 col-sm-12 p-0">
+              <li>Short URL: Bitly, Short.io, Tiny URL</li>
+              <li>CMS: StrAPIs, Rails Admin, ...</li>
+              <li>Firebase: Push Notifications, Firechat</li>
+              <li>Payments: Stripe, PayFort, EGHL, iPay88</li>
+              <li>Google: Analytics, AdSense, Map</li>
+              <li>SMS Services: Twillio, GO SMS, Macrokiosk</li>
+              <li>Email Services: Sendgrid, Gmail, Mailchimp</li>
+            </ul>
+          </div>
+          <h6>Third Party Tools/Services</h6>
         </div>
       </div>
     </div>
