--- a/app/assets/stylesheets/portfolio.scss.erb
+++ b/app/assets/stylesheets/portfolio.scss.erb
@@ -6,8 +6,7 @@
 .cover-container{  
   padding-right: 30px;
   padding-left: 30px;
-  margin-right: auto;
-  margin-left: auto;
+  margin: 0 auto;
   width: 100%;
   max-width: 1500px;
 }
@@ -384,6 +383,27 @@
   p{
     color: white;
   }
+}
+
+.skills-list{
+  display: inline-block;
+  width: 100%;
+  padding: 5px 15px;
+  ul{
+    list-style-type: disc;
+    text-align: left;
+    li{
+      font-size: 14px;
+      margin-left: 15px;
+    }
+  }
+}
+
+.p-0{
+  padding: 0px;
+}
+.p-100{
+  height: 100px;
 }
 
 @media screen and (max-width: 1000px) {
