--- a/app/assets/stylesheets/style1.css.erb
+++ b/app/assets/stylesheets/style1.css.erb
@@ -552,15 +552,16 @@ h5.title-w3 {
 }
 
 h5.title-w3 > b{
-	padding-left: 35px;
+	padding-left: 15px;
 }
 
 h5.title-w3 span {
-	display: block;
+	display: table;
 	font-size: 15px;
 	width: 100px;
 	text-align: left;
 	padding: 5px 0px 5px 9px;
+	margin-bottom: -2px;
 	/* background: var(--main-secondary-color-main); */
 	border-bottom: 2px solid #f94b3f;
 	border-left: 2px solid #f94b3f;
@@ -817,7 +818,7 @@ h3.subheading-agileits-w3layouts {
 	display: flow-root;
 	max-width: 1500px;
 	margin: 0 auto;
-	padding: 35px 0px;
+	padding: 35px;
 }
 
 
@@ -836,12 +837,31 @@ h3.subheading-agileits-w3layouts {
 .second-block{
 	margin-top: 15px;
 	padding: 35px;
-	border: 16px solid #000;
-	border-top-right-radius: 100px;
-	border-bottom-left-radius: 100px;
+	/* border: 16px solid #000; */
+	border-top-right-radius: 80px;
+	border-bottom-left-radius: 80px;
+	border-bottom: 2px solid #f94b3f;
+	border-left: 2px solid #f94b3f;
+	/* border-radius: 50px; */
+	box-shadow: -3px 2px 3px #fc843f;
+	overflow: hidden;
 }
 
-.skills-details{
+.second-block::after {
+	content: " ";
+	position: absolute;
+	top: 3px;
+	right: 3px;
+	width: 150px;
+	height: 150px;
+	border-top: 1px solid #f94b3f;
+	border-right: 1px solid #f94b3f;
+	border-radius: 0px 80px 0px 0px;
+	box-shadow: 3px -3px 3px #fc843f;
+	opacity: 0.3;
+}
+
+.second-block-inner{
 	padding: 35px 20px;
   background: var(--main-secondary-color-main);
   box-shadow: -3px 7px 15px rgb(21 21 21 / 38%);
@@ -849,9 +869,6 @@ h3.subheading-agileits-w3layouts {
   border-bottom-left-radius: 50px;
 }
 
-.skills-details p.para-agileits-w3layouts{
-	height: 100px;
-}
 
 /*-- //about-right --*/
 
