--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Touqeer Ahmad - Ruby on Rails Developer</title>
+  <title>Touqeer Ahmad - Software Lead Engineer</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
   <%= favicon_link_tag 'profile.jpg' %>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
@@ -9,14 +9,13 @@
   <%= csrf_meta_tags %>
   <!-- Meta Tags -->
   <meta property="og:image" content="<%= asset_path('profile-2.jpg') %>">
-  <meta property="og:url" content="https://touqeer-ahmad.herokuapp.com/">
-  <meta property="og:url" content="https://www.linkedin.com/in/touqeer-ahmad/">
+  <meta property="og:url" content="https://touqeer.dev/">
   <meta property="og:title" content="Touqeer Ahmad">
   <meta property="og:description" content="Touqeer Ahmad Ruby on Rails Developer, DevOps, AWS, Full Stack">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="keywords" content="toueer ahmad, tqr, tqr093, university of central punjab, ror developer, software engineer, ruby on rails, ruby on rails developer, aws service expert, aws expert, web developer, web deployment, amazon web services, website maker, api developer, responsive site maker, mvc, modal view controller" />
+  <meta name="keywords" content="toueer ahmad, tqr, tqr093, university of central punjab, ror developer, software engineer, software lead engineer, tech lead, DevOps, AWS, web developer, frontend developer, full stack developer, fullstack developer, ruby on rails, ruby on rails developer, aws service expert, aws expert, web developer, web deployment, amazon web services, website maker, api developer, responsive site maker, mvc, modal view controller" />
   <meta name="description" content="touqeer ahmad full stack ruby on rails web developer" />
   <script type="application/x-javascript">
     addEventListener("load", function () {
