--- a/app/views/portfolios/_education.html.erb
+++ b/app/views/portfolios/_education.html.erb
@@ -1,19 +1,19 @@
-<!--education-->
-<div class="display-w3lsagile">
-	<div class="col-md-7 col-sm-7 edu-img-agileits">
+<div id="education">
+	<div class="tittle-agileinfo col-xs-12 col-sm-12 col-md-12 col-lg-12">
+		<h5 class="title-w3">
+			<span>03</span>
+		</h5>
+		<h5 class="title-w3">
+			<b>Education</b>
+		</h5>
 	</div>
-	<div class="col-md-5 col-sm-5 display-grid-w3lsagile display-grid-1-w3lsagile">
-
-		<!-- Scrolling-Articles -->
-		<div class="activity_box agileits w3layouts">
-			<div class="title-wthree">
-				<h5 class="title-w3"><span>02</span>Education</h5>
-				<div class="clearfix"></div>
-			</div>
-			<div class="scrollbar agileits w3layouts" id="style-2">
+	<br>
+	<div class="grey-text-style second-block col-xs-12 col-sm-12 col-md-12 col-lg-12">
+		<div class="second-block-inner">
+			<div class="agileits w3layouts">
 				<div class="agileits w3layouts">
 					<div class="activity-img agileits w3layouts">
-						<h6>2012-2016</h6>
+						<h6>2012<br>.<br>.<br>.<br>2016</h6>
 					</div>
 					<div class="activity-desc agileits w3layouts">
 						<h5>University of Central Punjab</h5>
@@ -23,7 +23,7 @@
 				</div>
 				<div class="agileits w3layouts">
 					<div class="activity-img agileits w3layouts">
-						<h6>2010-2012</h6>
+						<h6>2010<br>.<br>.<br>.<br>2012</h6>
 					</div>
 					<div class="activity-desc agileits w3layouts">
 						<h5>Punjab College</h5>
@@ -33,9 +33,5 @@
 				</div>
 			</div>
 		</div>
-		<!-- //Scrolling-Articles -->
-
 	</div>
-	<div class="clearfix"></div>
 </div>
-<!--//education-->
