--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -7,12 +7,12 @@
 </div>
 <!-- //banner -->
 <%= render partial: 'about' %>
-<%#= render partial: 'education' %>
-<%#= render partial: 'experience' %>
 <%= render partial: 'skills' %>
+<%= render partial: 'education' %>
+<%= render partial: 'experience' %>
 <%#= render partial: 'portfolio' %>
-<%#= render partial: 'contact' %>
-<%#= render partial: 'layouts/footer' %>
+<%= render partial: 'contact' %>
+<%= render partial: 'layouts/footer' %>
 
 <a href="#home" class="scroll" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
 <script type="text/javascript">
