--- a/app/assets/stylesheets/style1.css.erb
+++ b/app/assets/stylesheets/style1.css.erb
@@ -244,7 +244,7 @@ header {
     bottom: 6%;
 }
 .banner-text-w3-agileits p {
-	font-size: 18px;
+	font-size: 20px;
 	letter-spacing: 7px;
 	font-weight: 400;
 	background: rgba(0, 0, 0, 0.32);
@@ -814,11 +814,14 @@ h3.subheading-agileits-w3layouts {
 	text-align: left;
 }
 
-#about, #skills{
+#about, #skills, #education, #experience, #contact>.tittle-agileinfo{
 	display: flow-root;
 	max-width: 1500px;
 	margin: 0 auto;
-	padding: 35px;
+	padding: 40px 35px;
+}
+#contact>.tittle-agileinfo{
+	float: none;
 }
 
 
@@ -1062,7 +1065,7 @@ h3.subheading-agileits-w3layouts {
 }
 
 .activity-img {
-	width: 25%;
+	width: 200px;
 	float: left;
 }
 
@@ -1308,7 +1311,7 @@ h3.subheading-agileits-w3layouts {
 }
 
 .address-w3layouts p {
-	color: #9e9e9e;
+	color: white;
 }
 
 .address-w3layouts h4 a {
@@ -1377,6 +1380,33 @@ h3.subheading-agileits-w3layouts {
 .fa-rubygems{
 	height: 40px;
 }
+.fa-Email::after{
+	background-image: url('<%= asset_path("email.png") %>');
+  background-size: 60px auto;
+  display: inline-block;
+  vertical-align: middle;
+  width: 60px; 
+  height: 60px;
+  content:"";
+}
+.fa-Whatsapp::after{
+	background-image: url('<%= asset_path("whatsapp.png") %>');
+  background-size: 60px auto;
+  display: inline-block;
+  vertical-align: middle;
+  width: 60px; 
+  height: 60px;
+  content:"";
+}
+.fa-Mobile::after{
+	background-image: url('<%= asset_path("mobile.png") %>');
+  background-size: 60px auto;
+  display: inline-block;
+  vertical-align: middle;
+  width: 60px; 
+  height: 60px;
+  content:"";
+}
 .fa-rubygems::after{
 	background-image: url('<%= asset_path("rubygems.png") %>');
   background-size: 40px auto;
@@ -1386,8 +1416,30 @@ h3.subheading-agileits-w3layouts {
   height: 40px;
   content:"";
 }
+.fa-stackoverflow::after{
+	background-image: url('<%= asset_path("stackoverflow.png") %>');
+  background-size: 40px auto;
+  display: inline-block;
+  vertical-align: middle;
+  width: 40px; 
+  height: 40px;
+  content:"";
+}
+.fa-Facebook::after{
+	background-image: url('<%= asset_path("facebook.png") %>');
+  background-size: 40px auto;
+  display: inline-block;
+  vertical-align: middle;
+  width: 40px; 
+  height: 40px;
+  content:"";
+}
+.w3l-social ul li a.fa.fa-Email,
 .w3l-social ul li a.fa.fa-github,
-.w3l-social ul li a.fa.fa-facebook,
+.w3l-social ul li a.fa.fa-Mobile,
+.w3l-social ul li a.fa.fa-Whatsapp,
+.w3l-social ul li a.fa.fa-stackoverflow,
+.w3l-social ul li a.fa.fa-Facebook,
 .w3l-social ul li a.fa.fa-linkedin,
 .w3l-social ul li a.fa.fa-twitter,
 .w3l-social ul li a.fa.fa-rubygems,
@@ -1443,6 +1495,24 @@ h3.subheading-agileits-w3layouts {
 }
 
 .w3l-social ul li a.fa.fa-rubygems:hover{
+	filter: saturate(2);
+}
+
+.w3l-social ul li a.fa.fa-Facebook:hover{
+	filter: saturate(4);
+}
+
+.w3l-social ul li a.fa.fa-stackoverflow:hover{
+	filter: saturate(4);
+}
+
+.fa.fa-Whatsapp:hover{
+	filter: saturate(2);
+}
+.fa.fa-Mobile:hover{
+	filter: saturate(2);
+}
+.fa.fa-Email:hover{
 	filter: saturate(2);
 }
 
@@ -1601,9 +1671,9 @@ h3.subheading-agileits-w3layouts {
 		font-size: 0.9em;
 		letter-spacing: 6px;
 	}
-	.banner-text-w3-agileits {
+	/*.banner-text-w3-agileits {
 		margin-top: 3em;
-	}
+	}*/
 	.person-info-agileits-w3layouts {
 		padding: 2.8em;
 	}
@@ -1672,9 +1742,9 @@ h3.subheading-agileits-w3layouts {
 	.services-grids:nth-child(3) {
 		margin-right: 0.8em;
 	}
-	.services-grids {
+	/*.services-grids {
 		width: 49%;
-	}
+	}*/
 	.botton a {
 		font-size: 15px;
 	}
@@ -1702,9 +1772,9 @@ h3.subheading-agileits-w3layouts {
 		font-size: 0.8em;
 		letter-spacing: 5px;
 	}
-	.banner-text-w3-agileits {
+	/*.banner-text-w3-agileits {
 		margin-top: 4em;
-	}
+	}*/
 	.about-border-w3ls {
 		padding: 21em 20em;
 	}
