--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,11 +16,11 @@
 				<ul class="nav navbar-nav">
 					<li><a class="scroll fa fa-home" title="Home" href="#home"></a></li>
 					<li><a class="scroll fa fa-user" title="About" href="#about"></a></li>
+					<li><a class="scroll fa fa-laptop" title="Skills" href="#skills"></a></li>
 					<li><a class="scroll fa fa-graduation-cap" title="Education" href="#education"></a></li>
 					<li><a class="scroll fa fa-briefcase" title="Experience" href="#experience"></a></li>
-					<li><a class="scroll fa fa-laptop" title="Skills" href="#skills"></a></li>
 					<li><a class="scroll fa fa-phone" title="Contact Me" href="#contact"></a></li>
-					<li><a class="scroll fa fa-download" title="Download Resume"></a></li>
+					<li><a class="scroll fa fa-download" target="_blank" href="/touqeer-ahmad-2020.pdf" title="Download Resume"></a></li>
 				</ul>
 			</div>
 		</nav>
