--- a/app/views/portfolios/_experience.html.erb
+++ b/app/views/portfolios/_experience.html.erb
@@ -1,16 +1,16 @@
-<!--experience-->
-<div class="display-w3lsagile">
-	<div class="col-md-7 col-sm-7 exp-img-agileits">
+<div id="experience">
+	<div class="tittle-agileinfo col-xs-12 col-sm-12 col-md-12 col-lg-12">
+		<h5 class="title-w3">
+			<span>04</span>
+		</h5>
+		<h5 class="title-w3">
+			<b>Experience</b>
+		</h5>
 	</div>
-	<div class="col-md-5 col-sm-5 display-grid-w3lsagile display-grid-1-w3lsagile">
-
-		<!-- Scrolling-Articles -->
-		<div class="activity_box agileits w3layouts">
-			<div class="title-wthree work_box">
-				<h5 class="title-w3"><span>03</span>Work Experience</h5>
-				<div class="clearfix"></div>
-			</div>
-			<div class="scrollbar agileits w3layouts" id="style-1">
+	<br>
+	<div class="grey-text-style second-block col-xs-12 col-sm-12 col-md-12 col-lg-12">
+		<div class="second-block-inner">
+			<div class="agileits w3layouts">
 				<div class="activity-row agileits w3layouts">
 					<div class="activity-img agileits w3layouts">
 						<h6>Present<br>.<br>.<br>.<br>Jun 2019</h6>
@@ -43,9 +43,5 @@
 				</div>
 			</div>
 		</div>
-		<!-- //Scrolling-Articles -->
-
 	</div>
-	<div class="clearfix"></div>
 </div>
-<!--//experience-->
