--- a/app/views/portfolios/_contact.html.erb
+++ b/app/views/portfolios/_contact.html.erb
@@ -22,7 +22,7 @@
 					<a class="fa fa-Whatsapp" target="_blank" href="https://wa.me/+60199550994"></a>
 				</h6>
 				<hr style="height: 3px;border:none;width: 185px;background: -webkit-linear-gradient(red, orange);">
-				<p class="para-agileits-w3layouts"><strong>Location: </strong> Lahore, Pakistan</p>
+				<p class="para-agileits-w3layouts"><strong>Location: </strong> Kuala Lumpur, Malaysia</p>
 			</div>
 			<div class="botttom-nav-agileits">
 				<div class="w3l-social">
